--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,9 @@
+.sourceCode {
+  background: #ccebff !important;
+  border-radius: 15px;
+}
+
+
 .rmddownload {
   padding: 1em 1em 1em 4em;
   border-radius: 15px;
@@ -21,7 +27,7 @@
   padding: 1em 1em 1em 4em;
   border-radius: 15px;
   margin-bottom: 10px;
-  background: #AED6F1 5px center/3em no-repeat;
+  background: #a3d69f 5px center/3em no-repeat;
   background-image: url("images/common/circle_link.png");
 }
 
@@ -29,7 +35,7 @@
   padding: 1em 1em 1em 4em;
   border-radius: 15px;
   margin-bottom: 10px;
-  background: #a3d69f 5px center/3em no-repeat;
+  background: #e6ccff 5px center/3em no-repeat;
   background-image: url("images/common/lightbulb.png");
 }
 
