--- a/docs/style.css
+++ b/docs/style.css
@@ -3,6 +3,13 @@
   border-radius: 15px;
 }
 
+.genericEq {
+  padding: 1em 1em 1em 2em;
+  border-radius: 0px 15px 15px 0px;
+  background-color: #ffddcc;
+  border-left: 20px solid #ff5500;
+  margin-bottom: 10px;
+}
 
 .rmddownload {
   padding: 1em 1em 1em 4em;
