test padding of eq box

--- a/docs/style.css
+++ b/docs/style.css
@@ -4,7 +4,7 @@
 }
 
 .genericEq {
-  padding: 1em 1em 1em 2em;
+  padding: 1em;
   border-radius: 0px 15px 15px 0px;
   background-color: #ffddcc;
   border-left: 20px solid #ff5500;
